--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <div class="header-container d-flex flex-column align-items-start">
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active"><i class="bi bi-house navicon"></i>Home</a></li>
-          <li><a href="#portfolio"><i class="bi bi-images navicon"></i> Portfolio</a></li>
-          <li><a href="#resume"><i class="bi bi-file-earmark-text navicon"></i> Resume</a></li>
+          <li><a href="#hero" class="active"><i class="bi bi-house navicon text-white"></i>Home</a></li>
+          <li><a href="#portfolio"><i class="bi bi-images navicon text-white"></i> Portfolio</a></li>
+          <li><a href="#resume"><i class="bi bi-file-earmark-text navicon text-white"></i> Resume</a></li>
         </ul>
       </nav>
 
@@ -95,18 +95,16 @@
                   </div>
                 </div>
 
-                <div class="social-links py-4 justify-content-between px-5">
+                <div class="social-links py-4 justify-content-center px-5">
                   <a href="https://x.com/akumira34"><i class="bi bi-twitter-x"></i></a>
-                  <a href="https://instagram.com/akum1ra"><i class="bi bi-instagram"></i></a>
-                  <a href="https://linkedin.com/in/akumira"><i class="bi bi-linkedin"></i></a>
                   <a href="https://be.net/akumira"><i class="bi bi-behance"></i></a>
+                  <a href="https://linkedin.com/in/akumira"><i class="bi bi-linkedin"></i></a>
+
                 </div>
-                <div class="social-links py-1 justify-content-between px-5">
-                  <a href="https://behance.net/gallery/155422341/Ninjas-in-Pyjamas-NINJUTSU-COLLECTION"><i
-                      class="bi bi-behance"></i></a>
+                <div class="social-links py-1 justify-content-center px-5">
                   <a href="https://dribbble.com/Akumira34"><i class="bi bi-dribbble"></i></a>
+                  <a href="https://instagram.com/akum1ra"><i class="bi bi-instagram"></i></a>
                   <a href="https://nip.gl/collections/ninjutsu"><i class="bi bi-collection"></i></a>
-                  <a href="https://pinterest.com/akumira34"><i class="bi bi-pinterest"></i></a>
                 </div>
 
               </div>
@@ -124,117 +122,86 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
+        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+          consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
+          in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
-
           <div class="row">
             <div class="col-lg-12">
               <div class="row gy-4 portfolio-container isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-                <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-photography">
+                <div class="col-lg-4 col-md-4 portfolio-item">
                   <div class="portfolio-wrap">
-                    <a href="assets/img/portfolio/i1.webp" title="Portfolio Image 1">
-                      <img src="assets/img/portfolio/i1.webp" class="img-fluid" alt="Portfolio Image 1" loading="lazy">
-                      <div class="portfolio-info">
-                        <div class="content">
-                    </a>
+                    <iframe src="https://www.behance.net/embed/project/233287305?ilo0=1" height="316" width="404"
+                      allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                      refererPolicy="strict-origin-when-cross-origin"></iframe>
                   </div>
-                </div>
-              </div>
-            </div><!-- End Portfolio Item -->
+                </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-design">
-              <div class="portfolio-wrap">
-                <a href="assets/img/portfolio/i2.webp" title="Portfolio Image 2">
-                  <img src="assets/img/portfolio/i2.webp" class="img-fluid" alt="Portfolio Image 2" loading="lazy">
-                  <div class="portfolio-info">
-                    <div class="content">
-                </a>
-              </div>
+                <div class="col-lg-4 col-md-4 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <iframe src="https://www.behance.net/embed/project/227748937?ilo0=1" height="316" width="404"
+                      allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                      refererPolicy="strict-origin-when-cross-origin"></iframe>
+                  </div>
+                </div><!-- End Portfolio Item -->
+
+                <div class="col-lg-4 col-md-4 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <iframe src="https://www.behance.net/embed/project/220865921?ilo0=1" height="316" width="404"
+                      allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                      refererPolicy="strict-origin-when-cross-origin"></iframe>
+                  </div>
+                </div><!-- End Portfolio Item -->
+
+                <div class="col-lg-4 col-md-4 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <iframe src="https://www.behance.net/embed/project/155422341?ilo0=1" height="316" width="404"
+                      allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                      refererPolicy="strict-origin-when-cross-origin"></iframe>
+                  </div>
+                </div><!-- End Portfolio Item -->
+
+                <div class="col-lg-4 col-md-4 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <iframe src="https://www.behance.net/embed/project/150353795?ilo0=1" height="316" width="404"
+                      allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                      refererPolicy="strict-origin-when-cross-origin"></iframe>
+                  </div>
+                </div><!-- End Portfolio Item -->
+
+                <div class="col-lg-4 col-md-4 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <iframe src="https://www.behance.net/embed/project/214891211?ilo0=1" height="316" width="404"
+                      allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                      refererPolicy="strict-origin-when-cross-origin"></iframe>
+                  </div>
+                </div><!-- End Portfolio Item -->
+
+                <div class="col-lg-4 col-md-4 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <iframe src="https://www.behance.net/embed/project/160621725?ilo0=1" height="316" width="404"
+                      allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                      refererPolicy="strict-origin-when-cross-origin"></iframe>
+                  </div>
+                </div><!-- End Portfolio Item -->
+
+                <div class="col-lg-4 col-md-4 portfolio-item">
+                  <div class="portfolio-wrap">
+                    <iframe src="https://www.behance.net/embed/project/204133281?ilo0=1" height="316" width="404"
+                      allowfullscreen lazyload frameborder="0" allow="clipboard-write"
+                      refererPolicy="strict-origin-when-cross-origin"></iframe>
+                  </div>
+                </div><!-- End Portfolio Item -->
+
+              </div><!-- End Portfolio Container -->
             </div>
           </div>
-        </div><!-- End Portfolio Item -->
 
-        <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-automotive">
-          <div class="portfolio-wrap">
-            <a href="assets/img/portfolio/i3.webp" title="Portfolio Image 3">
-              <img src="assets/img/portfolio/i3.webp" class="img-fluid" alt="Portfolio Image 3" loading="lazy">
-              <div class="portfolio-info">
-                <div class="content">
-            </a>
-          </div>
         </div>
-      </div>
-      </div><!-- End Portfolio Item -->
-
-      <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-nature">
-        <div class="portfolio-wrap">
-          <a href="assets/img/portfolio/i4.webp" title="Portfolio Image 4">
-            <img src="assets/img/portfolio/i4.webp" class="img-fluid" alt="Portfolio Image 4" loading="lazy">
-            <div class="portfolio-info">
-              <div class="content">
-          </a>
-        </div>
-      </div>
-      </div>
-      </div><!-- End Portfolio Item -->
-
-      <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-photography">
-        <div class="portfolio-wrap">
-          <a href="assets/img/portfolio/i5.webp" title="Portfolio Image 5">
-            <img src="assets/img/portfolio/i5.webp" class="img-fluid" alt="Portfolio Image 5" loading="lazy">
-            <div class="portfolio-info">
-              <div class="content">
-          </a>
-        </div>
-      </div>
-      </div>
-      </div><!-- End Portfolio Item -->
-
-      <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-design">
-        <div class="portfolio-wrap">
-          <a href="assets/img/portfolio/i6.webp" title="Portfolio Image 6">
-            <img src="assets/img/portfolio/i6.webp" class="img-fluid" alt="Portfolio Image 6" loading="lazy">
-            <div class="portfolio-info">
-              <div class="content">
-          </a>
-        </div>
-      </div>
-      </div>
-      </div><!-- End Portfolio Item -->
-
-      <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-design">
-        <div class="portfolio-wrap">
-          <a href="assets/img/portfolio/i7.webp" title="Portfolio Image 7">
-            <img src="assets/img/portfolio/i7.webp" class="img-fluid" alt="Portfolio Image 7" loading="lazy">
-            <div class="portfolio-info">
-              <div class="content">
-          </a>
-        </div>
-      </div>
-      </div>
-      </div><!-- End Portfolio Item -->
-
-      <div class="col-lg-6 col-md-6 portfolio-item isotope-item filter-design">
-        <div class="portfolio-wrap">
-          <a href="assets/img/portfolio/i8.webp" title="Portfolio Image 8">
-            <img src="assets/img/portfolio/i8.webp" class="img-fluid" alt="Portfolio Image 8" loading="lazy">
-            <div class="portfolio-info">
-              <div class="content">
-          </a>
-        </div>
-      </div>
-      </div>
-      </div><!-- End Portfolio Item -->
-
-      </div><!-- End Portfolio Container -->
-      </div>
-      </div>
-
-      </div>
 
       </div>
 
@@ -261,12 +228,13 @@
               <h3 class="mt-5 mb-5">Contact Information</h3>
 
               <ul class="contact-info list-unstyled">
-                <li class="mb-5"><i class="bi bi-geo-alt"></i><a href="https://share.google/73xc6lYGnZBzNBZdI">Istanbul,
+                <li class="mb-5"><i class="bi bi-geo-alt text-white"></i><a href="https://share.google/73xc6lYGnZBzNBZdI"
+                    class="text-white">Istanbul,
                     Türkiye</a>
                 </li>
-                <li class="mb-5"><i class="bi bi-linkedin"></i> <a
-                    href="https://linkedin.com/in/akumira">linkedin.com/in/akumira</a></li>
-                <li><i class="bi bi-envelope"></i><a href="mailto:akumirabusiness@gmail.com">
+                <li class="mb-5"><i class="bi bi-linkedin text-white"></i> <a href="https://linkedin.com/in/akumira"
+                    class="text-white">linkedin.com/in/akumira</a></li>
+                <li><i class="bi bi-envelope text-white"></i><a href="mailto:akumirabusiness@gmail.com" class="text-white">
                     akumirabusiness@gmail.com</a></li>
               </ul>
             </div>
@@ -341,25 +309,6 @@
                 <p class="company"><i class="bi bi-building"></i><a
                     href="https://nl.linkedin.com/company/sangalgg?trk=public_profile_experience-item_profile-section-card_subtitle-click">Sangal
                     Esports</a></p>
-              </div>
-
-            </div>
-
-            <!-- Projects Section -->
-            <div class="resume-section" data-aos="fade-up" data-aos-delay="200">
-              <h3><i class="bi bi-award me-2"></i>Projects</h3>
-
-              <div class="resume-item">
-                <h4><a
-                    href="https://behance.net/gallery/155422341/NINJUTSU-COLLECTION?trk=public_profile_project-title#">Ninjas
-                    in Pyjamas - NINJUTSU COLLECTION</a></h4>
-                <h5>2021</h5>
-              </div>
-
-              <div class="resume-item">
-                <h4><a href="https://behance.net/gallery/150353795/POSTER-EP1?trk=public_profile_project-title#">POSTER
-                    - EP.1 (Esports & Gaming)</a></h4>
-                <h5>2022</h5>
               </div>
             </div>
           </div>
