--- a/index.html
+++ b/index.html
@@ -119,14 +119,6 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-          consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-          in iste officiis commodi quidem hic quas.</p>
-      </div><!-- End Section Title -->
-
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <div class="row">
@@ -228,13 +220,14 @@
               <h3 class="mt-5 mb-5">Contact Information</h3>
 
               <ul class="contact-info list-unstyled">
-                <li class="mb-5"><i class="bi bi-geo-alt text-white"></i><a href="https://share.google/73xc6lYGnZBzNBZdI"
-                    class="text-white">Istanbul,
+                <li class="mb-5"><i class="bi bi-geo-alt text-white"></i><a
+                    href="https://share.google/73xc6lYGnZBzNBZdI" class="text-white">Istanbul,
                     Türkiye</a>
                 </li>
                 <li class="mb-5"><i class="bi bi-linkedin text-white"></i> <a href="https://linkedin.com/in/akumira"
                     class="text-white">linkedin.com/in/akumira</a></li>
-                <li><i class="bi bi-envelope text-white"></i><a href="mailto:akumirabusiness@gmail.com" class="text-white">
+                <li><i class="bi bi-envelope text-white"></i><a href="mailto:akumirabusiness@gmail.com"
+                    class="text-white">
                     akumirabusiness@gmail.com</a></li>
               </ul>
             </div>
